벤처투자 부당행위 신고센터 업데이트

--- a/portal/html/USR-1350-F-DASH.html
+++ b/portal/html/USR-1350-F-DASH.html
@@ -323,186 +323,114 @@
                     <span>벤처투자 부당행위 신고센터는 벤처투자와 관련된 불법 사항에 대해 유형별로 신고합니다.</span>
                 </div>
 
-                <div class="tbl_box_list">
-                    <ul>
-                        <li>
-                            <a href="./USR-1350-F-DTL.html">
-                                <div class="employment_status">
-                                    <span class="cont">신고</span>
-                                </div>
-                                <div class="info_box">
-                                    <div class="state_group">
-                                        <span class="blue">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                        <span class="pink">신고유형</span>
-                                        <span class="green">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                    </div>
-                                    <div class="tit">
-                                        피신고인 이름
-                                        <span>JB인베스트먼트㈜</span>
-                                    </div>
-                                    <div class="post_info">
-                                        <dl>
-                                            <dt>등록일</dt>
-                                            <dd>2022-07-01</dd>
-                                        </dl>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./USR-1350-F-DTL.html">
-                                <div class="employment_status">
-                                    <span class="cont">접수</span>
-                                </div>
-                                <div class="info_box">
-                                    <div class="state_group">
-                                        <span class="blue">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                        <span class="pink">신고유형</span>
-                                        <span class="green">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                    </div>
-                                    <div class="tit">
-                                        피신고인 이름
-                                        <span>JB인베스트먼트㈜</span>
-                                    </div>
-                                    <div class="post_info">
-                                        <dl>
-                                            <dt>등록일</dt>
-                                            <dd>2022-07-01</dd>
-                                        </dl>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./USR-1350-F-DTL.html">
-                                <div class="employment_status">
-                                    <span class="cont">완료</span>
-                                </div>
-                                <div class="info_box">
-                                    <div class="state_group">
-                                        <span class="blue">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                        <span class="pink">신고유형</span>
-                                        <span class="green">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                    </div>
-                                    <div class="tit">
-                                        피신고인 이름
-                                        <span>JB인베스트먼트㈜</span>
-                                    </div>
-                                    <div class="post_info">
-                                        <dl>
-                                            <dt>등록일</dt>
-                                            <dd>2022-07-01</dd>
-                                        </dl>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./USR-1350-F-DTL.html">
-                                <div class="employment_status">
-                                    <span class="cont">신고</span>
-                                </div>
-                                <div class="info_box">
-                                    <div class="state_group">
-                                        <span class="blue">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                        <span class="pink">신고유형</span>
-                                        <span class="green">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                    </div>
-                                    <div class="tit">
-                                        피신고인 이름
-                                        <span>JB인베스트먼트㈜</span>
-                                    </div>
-                                    <div class="post_info">
-                                        <dl>
-                                            <dt>등록일</dt>
-                                            <dd>2022-07-01</dd>
-                                        </dl>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./USR-1350-F-DTL.html">
-                                <div class="employment_status">
-                                    <span class="cont">신고</span>
-                                </div>
-                                <div class="info_box">
-                                    <div class="state_group">
-                                        <span class="blue">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                        <span class="pink">신고유형</span>
-                                        <span class="green">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                    </div>
-                                    <div class="tit">
-                                        피신고인 이름
-                                        <span>JB인베스트먼트㈜</span>
-                                    </div>
-                                    <div class="post_info">
-                                        <dl>
-                                            <dt>등록일</dt>
-                                            <dd>2022-07-01</dd>
-                                        </dl>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./USR-1350-F-DTL.html">
-                                <div class="employment_status">
-                                    <span class="cont">신고</span>
-                                </div>
-                                <div class="info_box">
-                                    <div class="state_group">
-                                        <span class="blue">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                        <span class="pink">신고유형</span>
-                                        <span class="green">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                    </div>
-                                    <div class="tit">
-                                        피신고인 이름
-                                        <span>JB인베스트먼트㈜</span>
-                                    </div>
-                                    <div class="post_info">
-                                        <dl>
-                                            <dt>등록일</dt>
-                                            <dd>2022-07-01</dd>
-                                        </dl>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+                <div class="reporting_misconduct_box">
 
-                <div class="board_btn">
-                    <!-- paging -->
-                    <div class="paging_box">
-                        <ul>
-                            <li class="prev_all"><a href="" title="최신페이지로 이동"></a></li>
-                            <li class="prev"><a href="" title="이전페이지로 이동"></a></li>
-                            <li class="on"><a href="">1</a></li>
-                            <li><a href="">2</a></li>
-                            <li><a href="">3</a></li>
-                            <li><a href="">4</a></li>
-                            <li><a href="">5</a></li>
-                            <li class="next"><a href="" title="다음페이지로 이동"></a></li>
-                            <li class="next_all"><a href="" title="마지막페이지로 이동"></a></li>
-                        </ul>
+                    <div class="tit_box">
+                        <h4><span></span>신고안내</h4>
                     </div>
-    
-                    <div class="btn_box">
-                        <a href="" class="btn_blue">불법 벤처투자 신고하기 >></a>
+
+                    <div class="report_info">
+                        <div class="left">
+
+                            <div class="content_list_box type_02">
+                                <div class="list_item">
+                                    <dl>
+                                        <dt>신고대상</dt>
+                                        <dd>
+                                            <ul>
+                                                <li>벤처캐피탈(조합포함)또는 해당 임직원의 불공정행위</li>
+                                                <li>벤처투자 촉진에 관한 법률에서 정한 창업투자회사의 부당행위 및 창업투자회사 대주주의 부당행위 등</li>
+                                                <li>개인투자조합, 전문개인, 엑셀러레이터를 사칭하는 행위</li>
+                                            </ul>
+                                        </dd>
+                                    </dl>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="right">
+
+                            <div class="content_list_box type_02">
+                                <div class="list_item">
+                                    <dl>
+                                        <dt>신고유형</dt>
+                                        <dd>
+                                            <ul>
+                                                <li>컨텐츠없음</li>
+                                                <li>&nbsp;</li>
+                                            </ul>
+                                        </dd>
+                                    </dl>
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
+
+                    <div class="tit_box">
+                        <h4><span></span>신고절차</h4>
+                    </div>
+
+                    <div class="procedure_box">
+
+                        <div class="step">
+                            <ul>
+                                <li>
+                                    <span>STEP1</span>
+                                    <strong>신고접수</strong>
+                                </li>
+                                <li>
+                                    <span>STEP2</span>
+                                    <strong>담당자 부여 및 조사 실시</strong>
+                                </li>
+                                <li>
+                                    <span>STEP3</span>
+                                    <strong>신고 처리</strong>
+                                </li>
+                                <li>
+                                    <span>STEP4</span>
+                                    <strong>결과 통보</strong>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="btn_box_group">
+                            <div class="btn_box">
+                                <a href="./USR-1350-F-LIST.html" class="btn_skyblue">신고내역 확인 ></a>
+                            </div>
+                            <div class="btn_box">
+                                <a href="./USR-1350-F-FORM.html" class="btn_blue">불법 벤처투자 신고하기 ></a>
+                            </div>
+                        </div>
+
+                        <dl class="etc_box">
+                            <dt>벤처투자포털 외에도 각 기관별로 벤처투자 부당행위 신고센터를 운영하고 있으니 참고하여 주시기 바랍니다.</dt>
+                            <dd>
+                                <div class="btn_box_group">
+                                    <div class="btn_box">
+                                        <a href="" class="" target="_blank" title="새 창 이동">
+                                            <strong>한국벤처캐피탈협회<br/>불공정행위신고센터</strong>
+                                            <span>바로가기 >></span>
+                                        </a>
+                                    </div>
+                                    <div class="btn_box">
+                                        <a href="" class="" target="_blank" title="새 창 이동">
+                                            <strong>한국벤처투자<br/>VC부당행위신고</strong>
+                                            <span>바로가기 >></span>
+                                        </a>
+                                    </div>
+                                    <div class="btn_box">
+                                        <a href="" class="" target="_blank" title="새 창 이동">
+                                            <strong>엔젤투자지원센터<br/>불법 엔젤투자 신고센터</strong>
+                                            <span>바로가기 >></span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </dd>
+                        </dl>
+
+                    </div>
+
                 </div>
 
             </div>
@@ -552,5 +480,120 @@
 
 </div>
 
+<!-- 더보기 팝업 -->
+<div id="note_03" class="dialog note_dialog more">
+
+    <div class="tit_box">
+        <h3>내용 전체보기</h3>
+    </div>
+
+    <div class="tbl_box_data">
+        <table>
+            <caption>내용 전체보기</caption>
+            <colgroup>
+                <col width="">
+            </colgroup>
+            <tbody>
+                <tr>
+                    <td class="bg">
+                        한국에서 드물게 기술 회사에 초기 투자를 해주는 곳. 한국 창업 생태계에 꼭 필요한 일을 하고 있다고 생각합니다. 항상 파이팅입니다! 스타트업에 진심을 다해주시는 멋진 엑셀러레이터입니다.
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="btn_box_group">
+        <div class="btn_box">
+            <a href="javascript:void(0);" class="btn_gray shadow pop_close">닫기</a>
+        </div>
+    </div>
+
+</div>
+
+<!-- 쪽지보내기 팝업 -->
+<div id="note_01" class="dialog note_dialog">
+
+    <div class="tit_box">
+        <h3>쪽지보내기</h3>
+    </div>
+
+    <div class="tbl_box_data">
+        <table>
+            <caption>쪽지보내기</caption>
+            <colgroup>
+                <col width="20%;">
+                <col width="30%;">
+                <col width="20%;">
+                <col width="30%;">
+            </colgroup>
+            <tbody>
+                <tr>
+                    <th scope="row"><label for="radio_01">구분</label></th>
+                    <td colspan="3">투자제안</td>
+                </tr>
+                <tr>
+                    <th scope="row"><label for="input_02">제목</label></th>
+                    <td colspan="3">
+                        <div class="inp_box">
+                            <input type="text" id="input_02">
+                        </div>
+                    </td>
+                </tr>
+                <tr class="bg">
+                    <td colspan="4">
+                        <div class="inp_group">
+                            <div class="textarea_box cont">
+                                <textarea id="textarea_01"></textarea>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="btn_box_group">
+        <div class="btn_box">
+            <a href="" class="btn_mint shadow">저장</a>
+        </div>
+        <div class="btn_box">
+            <a href="javascript:void(0);" class="btn_gray shadow pop_close">취소</a>
+        </div>
+    </div>
+
+</div>
+
+<!-- 내용수정 팝업 -->
+<div id="note_02" class="dialog note_dialog">
+
+    <div class="tit_box">
+        <h3>내용수정</h3>
+    </div>
+
+    <div class="talk_txt">
+        <div class="textarea_box">
+            <textarea placeholder="벤처투자 TALK는 500자 까지 작성 가능합니다."></textarea>
+        </div>
+        <div class="talk_txt_info">
+            <div class="left">
+                <span class="count">
+                    <span class="num">0</span>
+                    <span class="total">/ 500</span>
+                </span>
+            </div>
+        </div>
+    </div>
+
+    <div class="btn_box_group">
+        <div class="btn_box">
+            <a href="" class="btn_mint shadow">수정</a>
+        </div>
+        <div class="btn_box">
+            <a href="javascript:void(0);" class="btn_gray shadow pop_close">취소</a>
+        </div>
+    </div>
+
+</div>
 </body>
 </html>
