--- a/portal/html/USR-1350-F-DTL.html
+++ b/portal/html/USR-1350-F-DTL.html
@@ -323,185 +323,75 @@
                     <span>벤처투자 부당행위 신고센터는 벤처투자와 관련된 불법 사항에 대해 유형별로 신고합니다.</span>
                 </div>
 
-                <div class="tbl_box_list">
-                    <ul>
-                        <li>
-                            <a href="./USR-1350-F-DTL.html">
-                                <div class="employment_status">
-                                    <span class="cont">신고</span>
-                                </div>
-                                <div class="info_box">
-                                    <div class="state_group">
-                                        <span class="blue">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                        <span class="pink">신고유형</span>
-                                        <span class="green">신고유형</span>
-                                        <span class="black">신고유형</span>
+                <div class="tbl_box_detail type_02">
+                    <table>
+                        <caption>정보</caption>
+                        <colgroup>
+                            <col width="10%;">
+                            <col width="10%;">
+                            <col width="30%;">
+                            <col width="20%;">
+                            <col width="30%;">
+                        </colgroup>
+                        <tbody>
+                            <tr>
+                                <th scope="row" colspan="2"><label for="">신고상태</label></th>
+                                <td colspan="3">신고</td>
+                            </tr>
+                            <tr>
+                                <th scope="row" colspan="2"><label for="">신고 유형</label></th>
+                                <td colspan="3">한국벤처캐피탈협회</td>
+                            </tr>
+                            <tr>
+                                <th scope="row" rowspan="2"><label for="input_01">신고인</label></th>
+                                <th scope="row"><label for="input_01">회사명</label></th>
+                                <td>아사달</td>
+                                <th scope="row"><label for="input_02">이름<span class="req">*</span></label></th>
+                                <td>송은희</td>
+                            </tr>
+                            <tr>
+                                <th scope="row"><label for="sel_01">연락처<span class="req">*</span></label></th>
+                                <td>010-0000-0000</td>
+                                <th scope="row"><label for="input_10">이메일<span class="req">*</span></label></th>
+                                <td>dlapdlf@dlapdlf.com</td>
+                            </tr>
+                            <tr>
+                                <th scope="row"><label for="input_03">피신고인</label></th>
+                                <th scope="row"><label for="input_03">회사명</label></th>
+                                <td>JB인베스트먼트㈜</td>
+                                <th scope="row"><label for="input_04">이름<span class="req">*</span></label></th>
+                                <td>홍길돋</td>
+                            </tr>
+                            <tr>
+                                <td colspan="5">상세내용</td>
+                            </tr>
+                            <tr class="bg">
+                                <td colspan="5">
+                                    <div class="file_download">
+                                        <div class="btn_box bg">
+                                            <a href="" class="download" download>전체 다운로드</a>
+                                        </div>
+                                        <ul>
+                                            <li><a href="" download>AAA.jpg</a></li>
+                                            <li><a href="" download>BBB.hwp</a></li>
+                                            <li><a href="" download>CCC.zip</a></li>
+                                        </ul>
                                     </div>
-                                    <div class="tit">
-                                        피신고인 이름
-                                        <span>JB인베스트먼트㈜</span>
-                                    </div>
-                                    <div class="post_info">
-                                        <dl>
-                                            <dt>등록일</dt>
-                                            <dd>2022-07-01</dd>
-                                        </dl>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./USR-1350-F-DTL.html">
-                                <div class="employment_status">
-                                    <span class="cont">접수</span>
-                                </div>
-                                <div class="info_box">
-                                    <div class="state_group">
-                                        <span class="blue">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                        <span class="pink">신고유형</span>
-                                        <span class="green">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                    </div>
-                                    <div class="tit">
-                                        피신고인 이름
-                                        <span>JB인베스트먼트㈜</span>
-                                    </div>
-                                    <div class="post_info">
-                                        <dl>
-                                            <dt>등록일</dt>
-                                            <dd>2022-07-01</dd>
-                                        </dl>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./USR-1350-F-DTL.html">
-                                <div class="employment_status">
-                                    <span class="cont">완료</span>
-                                </div>
-                                <div class="info_box">
-                                    <div class="state_group">
-                                        <span class="blue">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                        <span class="pink">신고유형</span>
-                                        <span class="green">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                    </div>
-                                    <div class="tit">
-                                        피신고인 이름
-                                        <span>JB인베스트먼트㈜</span>
-                                    </div>
-                                    <div class="post_info">
-                                        <dl>
-                                            <dt>등록일</dt>
-                                            <dd>2022-07-01</dd>
-                                        </dl>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./USR-1350-F-DTL.html">
-                                <div class="employment_status">
-                                    <span class="cont">신고</span>
-                                </div>
-                                <div class="info_box">
-                                    <div class="state_group">
-                                        <span class="blue">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                        <span class="pink">신고유형</span>
-                                        <span class="green">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                    </div>
-                                    <div class="tit">
-                                        피신고인 이름
-                                        <span>JB인베스트먼트㈜</span>
-                                    </div>
-                                    <div class="post_info">
-                                        <dl>
-                                            <dt>등록일</dt>
-                                            <dd>2022-07-01</dd>
-                                        </dl>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./USR-1350-F-DTL.html">
-                                <div class="employment_status">
-                                    <span class="cont">신고</span>
-                                </div>
-                                <div class="info_box">
-                                    <div class="state_group">
-                                        <span class="blue">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                        <span class="pink">신고유형</span>
-                                        <span class="green">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                    </div>
-                                    <div class="tit">
-                                        피신고인 이름
-                                        <span>JB인베스트먼트㈜</span>
-                                    </div>
-                                    <div class="post_info">
-                                        <dl>
-                                            <dt>등록일</dt>
-                                            <dd>2022-07-01</dd>
-                                        </dl>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./USR-1350-F-DTL.html">
-                                <div class="employment_status">
-                                    <span class="cont">신고</span>
-                                </div>
-                                <div class="info_box">
-                                    <div class="state_group">
-                                        <span class="blue">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                        <span class="pink">신고유형</span>
-                                        <span class="green">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                    </div>
-                                    <div class="tit">
-                                        피신고인 이름
-                                        <span>JB인베스트먼트㈜</span>
-                                    </div>
-                                    <div class="post_info">
-                                        <dl>
-                                            <dt>등록일</dt>
-                                            <dd>2022-07-01</dd>
-                                        </dl>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
 
-                <div class="board_btn">
-                    <!-- paging -->
-                    <div class="paging_box">
-                        <ul>
-                            <li class="prev_all"><a href="" title="최신페이지로 이동"></a></li>
-                            <li class="prev"><a href="" title="이전페이지로 이동"></a></li>
-                            <li class="on"><a href="">1</a></li>
-                            <li><a href="">2</a></li>
-                            <li><a href="">3</a></li>
-                            <li><a href="">4</a></li>
-                            <li><a href="">5</a></li>
-                            <li class="next"><a href="" title="다음페이지로 이동"></a></li>
-                            <li class="next_all"><a href="" title="마지막페이지로 이동"></a></li>
-                        </ul>
+                <div class="btn_box_group type_tbl">
+                    <div class="btn_box bg">
+                        <a href="./USR-1350-F-FORM.html" class="btn_modi">수정</a>
                     </div>
-    
-                    <div class="btn_box">
-                        <a href="" class="btn_blue">불법 벤처투자 신고하기 >></a>
+                    <div class="btn_box bg">
+                        <a href="" class="btn_delete">삭제</a>
+                    </div>
+                    <div class="btn_box bg">
+                        <a href="./USR-1350-F-LIST.html" class="btn_list">목록</a>
                     </div>
                 </div>
 
