--- a/portal/html/USR-1350-F-FORM.html
+++ b/portal/html/USR-1350-F-FORM.html
@@ -323,185 +323,149 @@
                     <span>벤처투자 부당행위 신고센터는 벤처투자와 관련된 불법 사항에 대해 유형별로 신고합니다.</span>
                 </div>
 
-                <div class="tbl_box_list">
-                    <ul>
-                        <li>
-                            <a href="./USR-1350-F-DTL.html">
-                                <div class="employment_status">
-                                    <span class="cont">신고</span>
-                                </div>
-                                <div class="info_box">
-                                    <div class="state_group">
-                                        <span class="blue">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                        <span class="pink">신고유형</span>
-                                        <span class="green">신고유형</span>
-                                        <span class="black">신고유형</span>
+                <div class="tbl_box_data">
+                    <table>
+                        <caption>정보</caption>
+                        <colgroup>
+                            <col width="10%;">
+                            <col width="10%;">
+                            <col width="30%;">
+                            <col width="20%;">
+                            <col width="30%;">
+                        </colgroup>
+                        <tbody>
+                            <tr>
+                                <th scope="row" colspan="2"><label for="radio_001">신고 접수 기관</label></th>
+                                <td colspan="3">
+                                    <div class="inp_group">
+                                        <div class="rdo_box">
+                                            <span>
+                                                <input type="radio" id="radio_001" name="rdo_group_01" checked="">
+                                                <label for="radio_001">한국벤처투자</label>
+                                            </span>
+                                            <span>
+                                                <input type="radio" id="radio_002" name="rdo_group_01">
+                                                <label for="radio_002">한국벤처캐피탈협회</label>
+                                            </span>
+                                            <span>
+                                                <input type="radio" id="radio_003" name="rdo_group_01">
+                                                <label for="radio_003">엔젤협회</label>
+                                            </span>
+                                            <span>
+                                                <input type="radio" id="radio_004" name="rdo_group_01">
+                                                <label for="radio_004">창업진흥원</label>
+                                            </span>
+                                        </div>
                                     </div>
-                                    <div class="tit">
-                                        피신고인 이름
-                                        <span>JB인베스트먼트㈜</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row" rowspan="2"><label for="input_01">신고인</label></th>
+                                <th scope="row"><label for="input_01">회사명</label></th>
+                                <td>
+                                    <div class="inp_group">
+                                        <div class="inp_box">
+                                            <input type="text" id="input_01" value="아사달">
+                                        </div>
                                     </div>
-                                    <div class="post_info">
-                                        <dl>
-                                            <dt>등록일</dt>
-                                            <dd>2022-07-01</dd>
-                                        </dl>
+                                </td>
+                                <th scope="row"><label for="input_02">이름<span class="req">*</span></label></th>
+                                <td>
+                                    <div class="inp_group">
+                                        <div class="inp_box">
+                                            <input type="text" id="input_02">
+                                        </div>
                                     </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./USR-1350-F-DTL.html">
-                                <div class="employment_status">
-                                    <span class="cont">접수</span>
-                                </div>
-                                <div class="info_box">
-                                    <div class="state_group">
-                                        <span class="blue">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                        <span class="pink">신고유형</span>
-                                        <span class="green">신고유형</span>
-                                        <span class="black">신고유형</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row"><label for="sel_01">연락처<span class="req">*</span></label></th>
+                                <td>
+                                    <div class="inp_group tel min">
+                                        <div class="sel_box">
+                                            <select id="sel_01">
+                                                <option value="">선택</option>
+                                                <option value="">070</option>
+                                            </select>
+                                        </div>
+                                        <div class="inp_box">
+                                            <input type="text" id="input_06">
+                                        </div>
+                                        <div class="inp_box">
+                                            <input type="text" id="input_07">
+                                        </div>
                                     </div>
-                                    <div class="tit">
-                                        피신고인 이름
-                                        <span>JB인베스트먼트㈜</span>
+                                </td>
+                                <th scope="row"><label for="input_10">이메일<span class="req">*</span></label></th>
+                                <td>
+                                    <div class="inp_group email">
+                                        <div>
+                                            <div class="inp_box">
+                                                <input type="text" id="input_10">
+                                            </div>
+                                            <span>@</span>
+                                            <div class="inp_box">
+                                                <input type="text" id="input_11">
+                                            </div>
+                                        </div>
+                                        <div class="sel_box">
+                                            <select id="sel_03">
+                                                <option value="">직접입력</option>
+                                                <option value="">naver.com</option>
+                                            </select>
+                                        </div>
                                     </div>
-                                    <div class="post_info">
-                                        <dl>
-                                            <dt>등록일</dt>
-                                            <dd>2022-07-01</dd>
-                                        </dl>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row"><label for="input_03">피신고인</label></th>
+                                <th scope="row"><label for="input_03">회사명</label></th>
+                                <td>
+                                    <div class="inp_group">
+                                        <div class="inp_box">
+                                            <input type="text" id="input_03">
+                                        </div>
                                     </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./USR-1350-F-DTL.html">
-                                <div class="employment_status">
-                                    <span class="cont">완료</span>
-                                </div>
-                                <div class="info_box">
-                                    <div class="state_group">
-                                        <span class="blue">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                        <span class="pink">신고유형</span>
-                                        <span class="green">신고유형</span>
-                                        <span class="black">신고유형</span>
+                                </td>
+                                <th scope="row"><label for="input_04">이름<span class="req">*</span></label></th>
+                                <td>
+                                    <div class="inp_group">
+                                        <div class="inp_box">
+                                            <input type="text" id="input_04">
+                                        </div>
                                     </div>
-                                    <div class="tit">
-                                        피신고인 이름
-                                        <span>JB인베스트먼트㈜</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="5">
+                                    <div class="inp_group">
+                                        <div class="textarea_box cont">
+                                            <textarea id="textarea_01"></textarea>
+                                        </div>
                                     </div>
-                                    <div class="post_info">
-                                        <dl>
-                                            <dt>등록일</dt>
-                                            <dd>2022-07-01</dd>
-                                        </dl>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="5">
+                                    <div class="inp_group file">
+                                        <div class="file_box">
+                                            <input type="file" id="file_inp" class="file_inp">
+                                            <label for="file_inp">파일첨부</label>
+                                            <span class="file_value"></span>
+                                        </div>
                                     </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./USR-1350-F-DTL.html">
-                                <div class="employment_status">
-                                    <span class="cont">신고</span>
-                                </div>
-                                <div class="info_box">
-                                    <div class="state_group">
-                                        <span class="blue">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                        <span class="pink">신고유형</span>
-                                        <span class="green">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                    </div>
-                                    <div class="tit">
-                                        피신고인 이름
-                                        <span>JB인베스트먼트㈜</span>
-                                    </div>
-                                    <div class="post_info">
-                                        <dl>
-                                            <dt>등록일</dt>
-                                            <dd>2022-07-01</dd>
-                                        </dl>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./USR-1350-F-DTL.html">
-                                <div class="employment_status">
-                                    <span class="cont">신고</span>
-                                </div>
-                                <div class="info_box">
-                                    <div class="state_group">
-                                        <span class="blue">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                        <span class="pink">신고유형</span>
-                                        <span class="green">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                    </div>
-                                    <div class="tit">
-                                        피신고인 이름
-                                        <span>JB인베스트먼트㈜</span>
-                                    </div>
-                                    <div class="post_info">
-                                        <dl>
-                                            <dt>등록일</dt>
-                                            <dd>2022-07-01</dd>
-                                        </dl>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="./USR-1350-F-DTL.html">
-                                <div class="employment_status">
-                                    <span class="cont">신고</span>
-                                </div>
-                                <div class="info_box">
-                                    <div class="state_group">
-                                        <span class="blue">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                        <span class="pink">신고유형</span>
-                                        <span class="green">신고유형</span>
-                                        <span class="black">신고유형</span>
-                                    </div>
-                                    <div class="tit">
-                                        피신고인 이름
-                                        <span>JB인베스트먼트㈜</span>
-                                    </div>
-                                    <div class="post_info">
-                                        <dl>
-                                            <dt>등록일</dt>
-                                            <dd>2022-07-01</dd>
-                                        </dl>
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
 
-                <div class="board_btn">
-                    <!-- paging -->
-                    <div class="paging_box">
-                        <ul>
-                            <li class="prev_all"><a href="" title="최신페이지로 이동"></a></li>
-                            <li class="prev"><a href="" title="이전페이지로 이동"></a></li>
-                            <li class="on"><a href="">1</a></li>
-                            <li><a href="">2</a></li>
-                            <li><a href="">3</a></li>
-                            <li><a href="">4</a></li>
-                            <li><a href="">5</a></li>
-                            <li class="next"><a href="" title="다음페이지로 이동"></a></li>
-                            <li class="next_all"><a href="" title="마지막페이지로 이동"></a></li>
-                        </ul>
+                <div class="btn_box_group type_tbl">
+                    <div class="btn_box bg">
+                        <a href="" class="btn_save">저장</a>
                     </div>
-    
-                    <div class="btn_box">
-                        <a href="" class="btn_blue">불법 벤처투자 신고하기 >></a>
+                    <div class="btn_box bg">
+                        <a href="./USR-1350-F-LIST.html" class="btn_cancel">취소</a>
                     </div>
                 </div>
 
