--- a/pub_list.html
+++ b/pub_list.html
@@ -755,37 +755,37 @@
                 {
                     division: '',
                     depth1:'벤처투자 부당행위 신고센터 - 부당행위 신고안내',
-                    path:'./portal/html/USR-1350-F-LIST.html',
-                    date:'',
+                    path:'./portal/html/USR-1350-F-DASH.html',
+                    date:'2022-09-16',
                     mdate:'2022-10-19',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'벤처투자 부당행위 신고센터 - 부당행위 신고',
                     path:'./portal/html/USR-1350-F-FORM.html',
-                    date:'',
+                    date:'2022-09-16',
                     mdate:'2022-10-19',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[스타일가이드] [2차디자인]'
                 },
                 {
                     division: '',
                     depth1:'벤처투자 부당행위 신고센터 - 신고내역확인',
                     path:'./portal/html/USR-1350-F-LIST.html',
-                    date:'',
+                    date:'2022-09-16',
                     mdate:'2022-10-25',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'벤처투자 부당행위 신고센터 - 신고내역상세',
                     path:'./portal/html/USR-1350-F-DTL.html',
-                    date:'',
+                    date:'2022-09-16',
                     mdate:'2022-10-25',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
